--- a/plugin.xml
+++ b/plugin.xml
@@ -66,10 +66,10 @@ SOFTWARE.
       <array>
         <dict>
           <key>CFBundleURLName</key>
-          <string>$(CFBundleIdentifier).shareextension</string>
+          <string>com.facily.shareextension</string>
           <key>CFBundleURLSchemes</key>
           <array>
-            <string>$IOS_URL_SCHEME</string>
+            <string>cordovaopenwithfacily</string>
           </array>
         </dict>
       </array>
@@ -78,14 +78,14 @@ SOFTWARE.
     <!-- Entitlements (Debug) -->
     <config-file target="*-Debug.plist" parent="com.apple.security.application-groups">
       <array>
-        <string>group.$(CFBundleIdentifier).shareextension</string>
+        <string>group.com.facily.shareextension</string>
       </array>
     </config-file>
 
     <!-- Entitlements (Release) -->
     <config-file target="*-Release.plist" parent="com.apple.security.application-groups">
       <array>
-        <string>group.$(CFBundleIdentifier).shareextension</string>
+        <string>group.com.facily.shareextension</string>
       </array>
     </config-file>
 
