--- a/src/ios/ShareExtension/ShareExtension.entitlements
+++ b/src/ios/ShareExtension/ShareExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.__BUNDLE_IDENTIFIER__</string>
+		<string>group.com.facily</string>
 	</array>
 </dict>
 </plist>
