--- a/src/ios/ShareExtension/ShareExtension-Info.plist
+++ b/src/ios/ShareExtension/ShareExtension-Info.plist
@@ -5,11 +5,11 @@
         <key>CFBundleDevelopmentRegion</key>
         <string>en</string>
         <key>CFBundleDisplayName</key>
-        <string>__DISPLAY_NAME__</string>
+        <string>Postar na Facily</string>
         <key>CFBundleExecutable</key>
         <string>$(EXECUTABLE_NAME)</string>
         <key>CFBundleIdentifier</key>
-        <string>com.facily</string>
+        <string>com.facily.shareextension</string>
         <key>CFBundleInfoDictionaryVersion</key>
         <string>6.0</string>
         <key>CFBundleName</key>
